--- a/main.ipynb
+++ b/main.ipynb
@@ -177,8 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "token = \"7c065c5b83798ee0cfdf6fa3a4cd61178065b5f503ae90152b386cc8d3a9f3771ac562f367ce90a145717\"\n",
-    "gID = \"177664328\""
+    "from example_config import *"
    ]
   },
   {
