--- a/main.ipynb
+++ b/main.ipynb
@@ -97,12 +97,12 @@
     "                    continue\n",
     "                elif ans[\"failed\"] in [2, \"2\"]:\n",
     "                    errorText = \"Истекло время действия ключа. Некритично\"\n",
-    "                    __firstRequest()\n",
+    "                    _firstRequest()\n",
     "                    #time.sleep(5)\n",
     "                    continue\n",
     "                elif ans[\"failed\"] in [3, \"3\"]:\n",
     "                    errorText = \"Информация утрачена. Некритично\"\n",
-    "                    __firstRequest()\n",
+    "                    _firstRequest()\n",
     "                    #time.sleep(5)\n",
     "                    continue\n",
     "                else:\n",
